# r2sh

./: Cargo.toml
src/: client.rs  common.rs  main.rs  server.rs
src/client/: main.rs
src/server/: main.rs
